# libopustools-android

./: Android.mk  Application.mk  CMakeLists.txt  Makefile  README.md  ios.toolchain.cmake
opustool/: opusaudio.c
